<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_usuario.Registro"

    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:text="@string/TXTBienvenidos"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/TXTMensaje"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- contra usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/EtPasswordU"
            android:hint="@string/EtPasswordU"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <!-- confirmar contra usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/EtCPassword"
            android:hint="@string/EtCPassword"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>
    <!--Registrar password maestra-->
    <Button
        android:id="@+id/btnRegistrar"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/btnRegistrar"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#104487"/>
</androidx.appcompat.widget.LinearLayoutCompat>