<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login_u"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:text="@string/TXTBienvenidos"
        android:textSize="25sp"
        android:fontFamily="@font/opensans_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!-- contra usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        >
        <EditText
            android:id="@+id/EtPasswordU"
            android:hint="@string/EtPasswordU"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnIngresar"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/btnIngresar"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#104487"/>

</androidx.appcompat.widget.LinearLayoutCompat>