<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragmentos.F_Ajustes">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Txt_Ajustes"
            android:fontFamily="@font/opensans_bold"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>
        <!-- Eliminar todos los registros -->
        <TextView
            android:id="@+id/Eleminar_Todos_Registros"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Eleminar_Todos_Registros"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            app:drawableStartCompat = "@drawable/icono_eliminar_registro"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <!-- Exportar archivo -->
        <TextView
            android:id="@+id/Exportar_Archivo"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Exportar_Archivo"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            app:drawableStartCompat = "@drawable/icono_importar_exportar"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>

        <!-- Importar archivo -->
        <TextView
            android:id="@+id/Importar_Archivo"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Importar_Archivo"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            app:drawableStartCompat = "@drawable/icono_importar_exportar"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>
        <!-- Cambiar contrasena -->
        <TextView
            android:id="@+id/Cambiar_password_maestra"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/Cambiar_password_maestra"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            app:drawableStartCompat = "@drawable/icono_pass_maestra"
            android:drawablePadding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>