<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesPassword.Agregar_Actualizar_Registro"

    android:background="#fff"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="10dp"

        >
        <!--Titulo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtTitulo"
                android:hint="@string/EtTitulo"
                android:padding="15dp"
                android:textSize="25sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Cuenta-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtCuenta"
                android:hint="@string/EtCuenta"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Nombre usuario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtNombreUsuario"
                android:hint="@string/EtNombreUsuario"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/EtPassword"
                android:hint="@string/EtPassword"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Sitio WEB-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtSitioWeb"
                android:hint="@string/EtSitioWeb"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textWebEmailAddress"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Nota-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/EtNota"
                android:hint="@string/EtNota"
                android:textSize="18sp"
                android:height="150dp"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/Imagen"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/imagen"
            android:scaleType="centerCrop"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
        <Button
            android:id="@+id/Btn_Adjuntar_Imagen"
            android:text="@string/Btn_Adjuntar_Imagen"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:fontFamily="@font/opensans_bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>